ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------

04/04/04 adam

        * yet another rewrite of triangle-box collision code, this
        time based on code donated by Croteam, ported by asko@jetti.org
        and tweaked by Erwin.

04/04/04 adam

        * merged trimesh-trimesh collision code by
        Jeffrey Smith <jeffreys@Softimage.com>.

        * changed it to not break the trimesh interface, fix
        some GCC compilation problems, bring it up to date with
        ODE changes from 2003-11-15 -> 2004-04-04.

        * add ability to drop meshes on meshes in test_moving_trimesh,
        not as good as it could be but it's illustrative.

01/16/04 adam

	* implement a bunch of ultra-simple TriMesh functions that were
	in the headers but not in the code -- patch by
	Vadim Macagon <vadim_mcagon@hotmail.com>

	* disable temporal coherence on trimeshes by default, since
	it has scaleability issues that don't make it a general clear win.

12/01/03 adam

	* implement dxHashSpace::collide2(), not particularly efficiently.

11/14/03 adam

	* applied several Trimesh fixes and improvements from
	Aras Pranckevicius <nearaz@interamotion.com>

10/22/03 adam

	* apply Nguyen Binh's work for removing many dSetZero() calls
	and some other extraneous initializations.

07/29/03 martin

	* added dJointAdd*Torque/Force().

07/10/03 russ

	* added the StepFast code, by David Whittaker.

07/02/03 martin

	* added dMassSet*Total().

07/01/03 martin

	* added joint limits and motors to universal joints.

	* reversed the polarity of the dJOINT_REVERSE flag.

06/30/03 russ

	* added the TriMesh geom class and the quad tree space to the ODE